Added download link.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ performing certain tasks over and over again, e.g.,</p>
     <p>Because these tasks are repetitive and error-prone, they should be automated. Magetool does just that.</p>
     <p>See <a href="docs.html">the documentation</a> for a survey of what Magetool can do.</p>
     <h2>Download and install</h2>
-    <p><strong>Download:</strong> <a href="#">magetool-0.1.0.tar.gz</a></p>
+    <p><strong>Download:</strong> <a href="http://cloud.github.com/downloads/jhckragh/magetool/magetool-0.1.0.tar.gz">magetool-0.1.0.tar.gz</a></p>
     <pre><code>tar xvzf magetool-0.1.0.tar.gz
 cd magetool-0.1.0
 python setup.py build
