Made the logo into a link.

--- a/docs.html
+++ b/docs.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<h1><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"> <span id="doc">documentation</span></h1>
+<h1><a href="http://jhckragh.github.com/magetool/"><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"></a> <span id="doc">documentation</span></h1>
 
 <h2>Creating a module</h2>
 
