--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"></h1>
+    <h1><a href="http://jhckragh.github.com/magetool/"><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"></a></h1>
     <p><a href="http://jhckragh.github.com/magetool">Magetool</a> is an open source <abbr title="Command-Line Interface">CLI</abbr> utility designed to automate common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development.</p>
     <p>Often when you're developing a custom module you find yourself
 performing certain tasks over and over again, e.g.,</p>
