--- a/index.html
+++ b/index.html
@@ -16,20 +16,12 @@
   </head>
   <body>
     <h1><a href="http://jhckragh.github.com/magetool/"><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"></a></h1>
-    <p><a href="http://jhckragh.github.com/magetool">Magetool</a> is an open source <abbr title="Command-Line Interface">CLI</abbr> utility designed to automate common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development.</p>
-    <p>Often when you're developing a custom module you find yourself
-performing certain tasks over and over again, e.g.,</p>
-    <ul>
-      <li>Creating a directory structure for the module and activating it</li>
-      <li>Typing out long class names when creating a new controller, block, model, or helper</li>
-      <li>Editing the module's configuration file the first time you create a controller, block, model, or helper</li>
-    </ul>
-    <p>Because these tasks are repetitive and error-prone, they should be automated. Magetool does just that.</p>
+    <p><a href="http://jhckragh.github.com/magetool">Magetool</a> is a <abbr title="Command-Line Interface">CLI</abbr> utility for automating common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development.</p>
     <p>See <a href="docs.html">the documentation</a> for a survey of what Magetool can do.</p>
     <h2>Download and install</h2>
-    <p><strong>Download:</strong> <a href="http://cloud.github.com/downloads/jhckragh/magetool/magetool-0.1.3.tar.gz">magetool-0.1.3.tar.gz</a></p>
-    <pre><code>tar xvzf magetool-0.1.3.tar.gz
-cd magetool-0.1.3
+    <p><strong>Download:</strong> <a href="http://cloud.github.com/downloads/jhckragh/magetool/magetool-0.1.4.tar.gz">magetool-0.1.4.tar.gz</a></p>
+    <pre><code>tar xvzf magetool-0.1.4.tar.gz
+cd magetool-0.1.4
 python setup.py build
 sudo python setup.py install</code></pre>
     <p>The <a href="http://github.com/jhckragh/magetool">Magetool source code</a> is hosted on GitHub.</p>
