--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/reset-fonts/reset-fonts.css&2.8.0r4/build/base/base-min.css">
     <style type="text/css">
       html { text-align:center; }
-      body { font-size:123.1%; margin:0 auto; text-align:left; width:30em; }
+      body { font-size:108%; margin:0 auto; text-align:left; width:30em; }
       h1,h2,h3 { margin:1em 0 0 0; }
       li { margin-bottom:1em; }
       pre { background:#d8e3ee; padding:10px; width:auto; }
@@ -16,10 +16,9 @@
   </head>
   <body>
     <h1><a href="http://jhckragh.github.com/magetool/"><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"></a></h1>
-    <p><a href="http://jhckragh.github.com/magetool">Magetool</a> is a <abbr title="Command-Line Interface">CLI</abbr> utility for automating common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development.</p>
-    <p>See <a href="docs.html">the documentation</a> for a survey of what Magetool can do.</p>
+    <p>Magetool is a <abbr title="Command-Line Interface">CLI</abbr> utility for automating common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development. See <a href="docs.html">the documentation</a> for a survey of what Magetool can do.</p>
     <h2>Download and install</h2>
-    <p><strong>Download:</strong> <a href="http://cloud.github.com/downloads/jhckragh/magetool/magetool-0.1.4.tar.gz">magetool-0.1.4.tar.gz</a></p>
+    <p>Download: <a href="http://cloud.github.com/downloads/jhckragh/magetool/magetool-0.1.4.tar.gz">magetool-0.1.4.tar.gz</a></p>
     <pre><code>tar xvzf magetool-0.1.4.tar.gz
 cd magetool-0.1.4
 python setup.py build
