--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1><a href="http://jhckragh.github.com/magetool/"><img src="images/mt_logo.png" width="289" height="82" alt="Magetool"></a></h1>
-    <p>Magetool is a <abbr title="Command-Line Interface">CLI</abbr> utility for automating common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development. See <a href="docs.html">the documentation</a> for a survey of what Magetool can do.</p>
+    <p>Magetool is an open-source <abbr title="Command-Line Interface">CLI</abbr> utility for automating common tasks in <a href="http://www.magentocommerce.com/">Magento</a> module development. See <a href="docs.html">the documentation</a> for a survey of what Magetool can do.</p>
     <h2>Download and install</h2>
     <p>Download: <a href="http://cloud.github.com/downloads/jhckragh/magetool/magetool-0.1.4.tar.gz">magetool-0.1.4.tar.gz</a></p>
     <pre><code>tar xvzf magetool-0.1.4.tar.gz
