--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ sudo python setup.py install</code></pre>
     <h3>Prerequisites</h3>
     <p>To run Magetool you need to have the following software installed:</p>
     <ul>
-      <li><a href="http://www.python.org/download/releases/2.6.2/">Python 2.6</a></li>
+      <li><a href="http://www.python.org/download/">Python 2.6</a></li>
       <li><a href="http://codespeak.net/lxml/index.html#download">lxml</a></li>
     </ul>
     <p>On Ubuntu Linux you can install these dependencies through <code>apt</code>:</p>
